--- a/WebContent/public/css/loginStyles.css
+++ b/WebContent/public/css/loginStyles.css
@@ -41,13 +41,9 @@ body :-ms-input-placeholder {
   background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   opacity: 0.8;
   position: absolute;
-  top: 50%;
-  left: 0;
   width: 100%;
-  height: 400px;
-  margin-top: -200px;
+  height: 100%;
   overflow: hidden;
-
 }
 
 .wrapper.form-success .container h1 {
