--- a/WebContent/public/newCss/style.css
+++ b/WebContent/public/newCss/style.css
@@ -1145,6 +1145,18 @@ color: #333;
 .ML0 { margin-left:0}
 .MR0 { margin-right:0;}
 
+.comandDiv{
+	width:58px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.comandDiv > a{
+	width:38px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top:5px;
+}
 
 
 /*------------------------------------------------------------------
@@ -1285,10 +1297,6 @@ color: #333;
 		vertical-align: top;
 	}
 }
-
-
-
-
 
 /*------------------------------------------------------------------
 [3. Max Width: 979px]
