--- a/WebContent/public/newCss/style.css
+++ b/WebContent/public/newCss/style.css
@@ -54,9 +54,10 @@ ul{
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9');
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FAFAFA', endColorstr='#E9E9E9')";
 	
-	font-size: 10px;
+	font-size: 12px;
 	color: #444;
 	text-transform: uppercase;
+	text-align: center;
 }
 
 
